# so-tp-2024-1c-c-comenta

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  GNUmakefile  README.md  tp.code-workspace
configs/Documento de Pruebas/1. Prueba Planificación/: kernel.config
configs/Documento de Pruebas/4. Prueba IO/: memoria.config
configs/Documento de Pruebas/5. Prueba FS/: kernel.config
cpu/src/: cpu.h
deploy/: README.md  vboxmanage.md
docs/: README.md
docs/C - Comenta/v1.0/: C - Comenta- v1.0.docx
docs/C - Comenta/v1.1/: C - Comenta- v1.1.docx
docs/C - Comenta/v1.2/: C - Comenta- v1.2.docx
docs/C - Comenta/v1.3/: C - Comenta- v1.3.docx
docs/Pruebas Finales/v1.0/: 1C2024 - C-Comenta - Pruebas Finales.docx
docs/Pruebas Finales/v1.2/: 1C2024 - C-Comenta - Pruebas Finales.docx
docs/Pruebas Preliminares/: 1C2024 - C-Comenta - Pruebas Preliminares.docx
entradasalida/src/: entradasalida.c
kernel/src/: kernel.c  kernel.h
memoria/src/: memoria.c  memoria.h
mkframework/: main.mk
mkframework/footer/: executing.mk
src/: CMakeLists.txt  include.mk
src/cpu/: CMakeLists.txt  include.mk
src/cpu/src/: cpu.c  cpu.h  main.c  main.h  opcodes.c  opcodes.h  registers.c  registers.h  socket.c  socket.h
src/entradasalida/: CMakeLists.txt  FS.config  TECLADO.config  entradasalida.config  include.mk
src/entradasalida/src/: entradasalida.c  entradasalida.h  main.c  main.h
src/kernel/: CMakeLists.txt  PLANI_1  include.mk  kernel.config
src/kernel/src/: consola.c  consola.h  console.c  console.h  interfaces.c  interfaces.h  kernel.c  kernel.h  main.c  main.h  resources.c  resources.h  scheduler.c  scheduler.h  socket.c  socket.h  syscalls.c  syscalls.h
src/memoria/: .gitignore  CMakeLists.txt  include.mk  memoria.config
src/memoria/src/: main.c  main.h  memoria.c  memoria.h  parser.c  parser.h  socket.c  socket.h
src/utils/: .gitignore  CMakeLists.txt  include.mk
src/utils/src/utils/: arguments.c  arguments.h  estructuras.h  libraries.h  module.c  module.h  modules.c  modules.h  package.c  package.h  payload.c  payload.h  send.c  send.h  serialize.c  serialize.h  socket.c  socket.h  tp-2024-1c-Operativos.code-workspace
src/utils/src/utils/serialize/: arguments.c  arguments.h  cpu_instruction.c  cpu_instruction.h  cpu_memory_request.c  cpu_memory_request.h  cpu_opcode.c  cpu_opcode.h  eviction_reason.c  eviction_reason.h  exec_context.c  exec_context.h  exit.c  exit.h  interrupt.c  interrupt.h  io_type.c  io_type.h  kernel_interrupt.c  kernel_interrupt.h  list.c  list.h  memory.c  memory.h  pcb.c  pcb.h  port_type.c  port_type.h  return_value.c  return_value.h  subheader.c  subheader.h  subpayload.c  subpayload.h  text.c  text.h
tests/: CMakeLists.txt
tests/test1/: .gitignore  CMakeLists.txt
utils/src/utils/: socket.h
