# Filename: CMakeLists.txt / v2024.03.26-001, part of cc-CMake

set(PROGRAM1 cpu)
set(LIBRARY1 utils)
set(PROGRAM1_INCLUDEDIR src)
#set(PROGRAM1_LIBDIR lib)
add_executable(${PROGRAM1})
file(GLOB_RECURSE PROGRAM1_SOURCES "src/*.c")
target_sources(${PROGRAM1} PRIVATE ${PROGRAM1_SOURCES})
add_dependencies(${PROGRAM1} ${LIBRARY1})
target_compile_features(${PROGRAM1} PUBLIC c_std_17)
# target_precompile_headers(${PROGRAM1} PRIVATE)
target_include_directories(${PROGRAM1} BEFORE PUBLIC ${PROGRAM1_INCLUDEDIR})
#target_link_directories(${PROGRAM1} BEFORE PUBLIC ${PROGRAM1_LIBDIR})
# target_compile_definitions(${PROGRAM1} PUBLIC)
target_compile_options(${PROGRAM1} PUBLIC "")
target_link_options(${PROGRAM1} BEFORE PUBLIC "")
target_link_libraries(${PROGRAM1} PUBLIC m PRIVATE "")

list(APPEND EXECUTABLES_LIST ${PROGRAM1})
set(EXECUTABLES_LIST ${EXECUTABLES_LIST} PARENT_SCOPE)