# Filename: CMakeLists.txt / v2024.03.26-001, part of cc-CMake

set(PROGRAM3 kernel)
set(LIBRARY1 utils)
set(PROGRAM3_INCLUDEDIR src)
#set(PROGRAM3_LIBDIR lib)
add_executable(${PROGRAM3})
file(GLOB_RECURSE PROGRAM3_SOURCES "src/*.c")
target_sources(${PROGRAM3} PRIVATE ${PROGRAM3_SOURCES})
add_dependencies(${PROGRAM3} ${LIBRARY1})
target_compile_features(${PROGRAM3} PUBLIC c_std_99)
# target_precompile_headers(${PROGRAM3} PRIVATE)
target_include_directories(${PROGRAM3} BEFORE PUBLIC ${PROGRAM3_INCLUDEDIR})
#target_link_directories(${PROGRAM3} BEFORE PUBLIC ${PROGRAM3_LIBDIR})
# target_compile_definitions(${PROGRAM3} PUBLIC)
target_compile_options(${PROGRAM3} PUBLIC "")
target_link_options(${PROGRAM3} BEFORE PUBLIC "")
target_link_libraries(${PROGRAM3} PUBLIC m PRIVATE "")

list(APPEND EXECUTABLES_LIST ${PROGRAM3})
set(EXECUTABLES_LIST ${EXECUTABLES_LIST} PARENT_SCOPE)