# Filename: CMakeLists.txt / v2024.03.26-001, part of cc-CMake

set(LIBRARY1 utils)
set(LIBRARY1_INCLUDEDIR src)
set(LIBRARY1_LIBDIR lib)
add_library(${LIBRARY1} SHARED)
file(GLOB_RECURSE LIBRARY1_SOURCES "src/*.c")
target_sources(${LIBRARY1} PRIVATE ${LIBRARY1_SOURCES})
# add_dependencies(${LIBRARY1} )
target_compile_features(${LIBRARY1} PUBLIC c_std_17)
# target_precompile_headers(${LIBRARY1} PRIVATE)
target_include_directories(${LIBRARY1} BEFORE PUBLIC ${LIBRARY1_INCLUDEDIR})
target_link_directories(${LIBRARY1} BEFORE PUBLIC ${LIBRARY1_LIBDIR})
# target_compile_definitions(${LIBRARY1} PUBLIC)
target_compile_options(${LIBRARY1} PUBLIC "")
target_link_options(${LIBRARY1} BEFORE PUBLIC "")
target_link_libraries(${LIBRARY1} PUBLIC m PRIVATE "")

list(APPEND SHARED_LIBRARIES_LIST ${LIBRARY1})
set(SHARED_LIBRARIES_LIST ${EXECUTABLES_LIST} PARENT_SCOPE)